# bt_class_of_device

./: CMakeLists.txt  ClassOfDevice.cpp  ClassOfDevice.h  IMinorClass.h  MajorDeviceClass.cpp  MajorDeviceClass.h  README.md  ServiceClass.cpp  ServiceClass.h  main.cpp
MinorClass/: AudioVideoMinorClass.cpp  AudioVideoMinorClass.h  ComputerMinorClass.cpp  ComputerMinorClass.h  HealthMinorClass.cpp  HealthMinorClass.h  ImagingMinorClass.cpp  ImagingMinorClass.h  LANMinorClass.cpp  LANMinorClass.h  MinorClassFactory.cpp  MinorClassFactory.h  PeripheralMinorClass.cpp  PeripheralMinorClass.h  PhoneMinorClass.cpp  PhoneMinorClass.h  ToyMinorClass.cpp  ToyMinorClass.h  WearableMinorClass.cpp  WearableMinorClass.h
